--- a/julia/problem_041.ipynb
+++ b/julia/problem_041.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "ispandigital (generic function with 2 methods)"
+       "ispandigital (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -36,20 +36,28 @@
     }
    ],
    "source": [
-    "ispandigital(num, n=9) = sort(digits(num)) == 1:n"
+    "ispandigital(n) = sort(digits(n)) == 1:ndigits(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6491bb80",
+   "metadata": {},
+   "source": [
+    "#### Solution 1 (filter, maximum)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c3f0af80",
+   "id": "07dd188b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  10.191 s (201005819 allocations: 17.07 GiB)\n"
+      "  9.002 s (100502912 allocations: 12.96 GiB)\n"
      ]
     },
     {
@@ -63,7 +71,136 @@
     }
    ],
    "source": [
-    "@btime maximum([p for p in primes(987654321) if ispandigital(p, length(string(p)))])"
+    "@btime maximum(filter(ispandigital, primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d75bf4b0",
+   "metadata": {},
+   "source": [
+    "#### Solution 2 (filter, last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0229cb45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  9.034 s (100502912 allocations: 12.96 GiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7652413"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime last(filter(ispandigital, primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06fe20a0",
+   "metadata": {},
+   "source": [
+    "#### Solution 3 (list comprehension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c3f0af80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  9.011 s (100502909 allocations: 12.58 GiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7652413"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime maximum(p for p in primes(987654321) if ispandigital(p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3999151e",
+   "metadata": {},
+   "source": [
+    "#### Solution 4 (custom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4d05efec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "firsttrue (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function firsttrue(condition, iterator)\n",
+    "    for value in iterator\n",
+    "        condition(value) && return value\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c90443ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  8.906 s (99467137 allocations: 12.85 GiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7652413"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime firsttrue(ispandigital, reverse(primes(987654321)))"
    ]
   }
  ],
