--- a/julia/problem_022.ipynb
+++ b/julia/problem_022.ipynb
@@ -35,7 +35,7 @@
    ],
    "source": [
     "file_name = \"0022_names.txt\"\n",
-    "file_path = \"data/\"\n",
+    "file_path = \"../data/\"\n",
     "\n",
     "if isfile(file_path * file_name)\n",
     "    println(\"Reading file ...\")\n",
@@ -45,7 +45,7 @@
     "    s = read(download(\"https://projecteuler.net/resources/documents/\" * file_name), String)\n",
     "end\n",
     "\n",
-    "names = [String(name) for name in split(replace(s, '\"' => \"\"), \",\")]\n",
+    "names = split(replace(s, '\"' => \"\"), \",\")\n",
     "\n",
     "@assert length(names) == 5163"
    ]
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "function name_value(name::String)::Int64\n",
+    "function name_value(name)::Int64\n",
     "    val = 0\n",
     "    for letter in name\n",
     "        val += findfirst(==(only(letter)), 'A':'Z')\n",
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  664.542 μs (7 allocations: 80.89 KiB)\n"
+      "  735.084 μs (7 allocations: 242.39 KiB)\n"
      ]
     },
     {
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.433 ms (25287 allocations: 556.56 KiB)\n"
+      "  1.469 ms (25287 allocations: 798.73 KiB)\n"
      ]
     },
     {
