--- a/julia/problem_011.ipynb
+++ b/julia/problem_011.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "file_name = \"0011_grid.txt\"\n",
-    "file_path = \"data/\"\n",
+    "file_path = \"../data/\"\n",
     "\n",
     "M = DelimitedFiles.readdlm(file_path * file_name, ' ', Int64);"
    ]
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca34c62c",
+   "id": "4153ff21",
    "metadata": {},
    "outputs": [
     {
@@ -53,24 +53,22 @@
     "\n",
     "    nrows = size(M, 1)\n",
     "    ncols = size(M, 2)\n",
-    "\n",
-    "    @assert nrows == ncols \"Matrix in not square (number of rows and columns are not equal)\"\n",
     "    \n",
-    "    h = [Int64[] for _ in 1:ncols] # horizontals\n",
-    "    v = [Int64[] for _ in 1:nrows] # verticals\n",
+    "    h = [Int64[] for _ in 1:nrows] # horizontals (rows)\n",
+    "    v = [Int64[] for _ in 1:ncols] # verticals (columns)\n",
     "    f = [Int64[] for _ in 1:(ncols + nrows - 1)] # forward diagonals\n",
     "    b = [Int64[] for _ in 1:(ncols + nrows - 1)] # backward diagonals\n",
     "\n",
-    "    for x in 1:ncols \n",
-    "        for y in 1:nrows\n",
-    "            push!(h[y], M[y, x])\n",
-    "            push!(v[x], M[y, x])\n",
-    "            push!(f[x+y-1], M[y, x])\n",
-    "            push!(b[x-y+nrows], M[x, y])\n",
+    "    for i in 1:nrows \n",
+    "        for j in 1:ncols\n",
+    "            push!(h[i], M[i, j])\n",
+    "            push!(v[j], M[i, j])\n",
+    "            push!(f[i+j-1], M[i, j])\n",
+    "            push!(b[j-i+nrows], M[i, j])\n",
     "        end\n",
     "    end\n",
     "\n",
-    "    return Dict(\"lines_horizontal\" => h, \"lines_vertical\" => v, \"diagonals_forward\" => f, \"diagonals_backward\" => b)\n",
+    "    return Dict(\"horizontals\" => h, \"verticals\" => v, \"diagonals_forward\" => f, \"diagonals_backward\" => b)\n",
     "\n",
     "end"
    ]
@@ -160,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  66.791 μs (2789 allocations: 217.97 KiB)\n"
+      "  66.500 μs (2789 allocations: 217.97 KiB)\n"
      ]
     },
     {
