--- a/julia/problem_047.ipynb
+++ b/julia/problem_047.ipynb
@@ -16,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Primes\n",
-    "using BenchmarkTools"
+    "using Primes, BenchmarkTools"
    ]
   },
   {
