--- a/julia/problem_049.ipynb
+++ b/julia/problem_049.ipynb
@@ -17,36 +17,19 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "using Primes"
+    "using Primes, BenchmarkTools"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ba36a99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next prime\n",
-    "function next_prime(p)::Int64\n",
-    "    p += 1\n",
-    "    while !isprime(p)\n",
-    "        p += 1\n",
-    "    end\n",
-    "    return p\n",
-    "end;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "779448a5",
+   "id": "d64a3725",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "prime_range (generic function with 1 method)"
+       "prime_permutations (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -54,88 +37,48 @@
     }
    ],
    "source": [
-    "# Prime range\n",
-    "function prime_range(x, y)\n",
-    "    primes = Int64[]\n",
-    "    prime = x\n",
-    "    while prime < y\n",
-    "        prime = next_prime(prime)\n",
-    "        push!(primes, prime)\n",
-    "    end\n",
-    "    return [prime for prime in primes if prime ≤ y]\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "302be097",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Primes\n",
-    "primes = prime_range(1000, 9999);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6b270178",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Permutations\n",
-    "permutations = []\n",
-    "for x in primes\n",
-    "    perm = []\n",
-    "    push!(perm, x)\n",
-    "    xs = string(x)\n",
-    "    for y in primes\n",
-    "        ys = string(y)\n",
-    "        if y > x && join(sort([c for c in xs])) == join(sort([c for c in ys]))\n",
-    "            push!(perm, y)\n",
+    "function prime_permutations(x=3330)\n",
+    "\n",
+    "    p = primes(1000, 9999)\n",
+    "    filter!(n -> n ∉ [1487, 4817, 8147], p)\n",
+    "\n",
+    "    for a ∈ p\n",
+    "        b = a + x\n",
+    "        c = b + x\n",
+    "        if b ∈ p && c ∈ p && sort(digits(a)) == sort(digits(b)) == sort(digits(c))\n",
+    "            return (10^8)a + (10^4)b + c\n",
+    "            break\n",
     "        end\n",
     "    end\n",
-    "    push!(permutations, perm)\n",
+    "    \n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8c636515",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Permutations ≥ 3\n",
-    "permutations = [permutation for permutation in permutations if length(permutation) ≥ 3];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "cadf4ce7",
+   "execution_count": 3,
+   "id": "19b36696",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2969, 6299, 9629) --> 296962999629\n"
+      "  138.458 μs (1219 allocations: 108.59 KiB)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "296962999629"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Answer\n",
-    "for p in permutations\n",
-    "    l = length(p)\n",
-    "    combinations = [(i, j, k) for i in 1:l for j in 1:l for k in 1:l if k > j > i]\n",
-    "    for c in combinations\n",
-    "        if p[2] - p[1] == p[3] - p[2]\n",
-    "            println((p[1], p[2], p[3]), \" --> \", join(string(p[1], p[2], p[3])))\n",
-    "        end\n",
-    "    end\n",
-    "end"
+    "@btime prime_permutations()"
    ]
   }
  ],
