--- a/julia/problem_045.ipynb
+++ b/julia/problem_045.ipynb
@@ -79,14 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.789 ms (35 allocations: 3.38 MiB)\n"
+      "  2.796 ms (36 allocations: 3.38 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Set{Int64} with 1 element:\n",
-       "  1533776805"
+       "1533776805"
       ]
      },
      "metadata": {},
@@ -94,10 +93,12 @@
     }
    ],
    "source": [
-    "@btime intersect(\n",
-    "    Set(T(n) for n in 285+1:hi), \n",
-    "    Set(P(n) for n in 165+1:hi),\n",
-    "    Set(H(n) for n in 143+1:hi)\n",
+    "@btime first(\n",
+    "    intersect(\n",
+    "        Set(T(n) for n in 285+1:hi), \n",
+    "        Set(P(n) for n in 165+1:hi),\n",
+    "        Set(H(n) for n in 143+1:hi)\n",
+    "    )\n",
     ")"
    ]
   },
@@ -106,7 +107,27 @@
    "id": "06abfd04",
    "metadata": {},
    "source": [
-    "Solution 2 (pentagonal & hexagonal)"
+    "#### Solution 2 (pentagonal & hexagonal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cc80e81d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "all(x -> x in [T(n) for n ∈ 1:80_000], [H(n) for n ∈ 1:40_000])"
    ]
   },
   {
@@ -114,12 +135,13 @@
    "id": "a146f271",
    "metadata": {},
    "source": [
-    "It is superflous to have triangle numbers in the equation since all hexagonal numbers are also triangle numbers."
+    "> As shown above, it is superflous to have triangle numbers in the equation  \n",
+    "> since all hexagonal numbers are also triangle numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e15e5088",
    "metadata": {},
    "outputs": [
@@ -139,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "71fb4568",
    "metadata": {},
    "outputs": [
@@ -147,14 +169,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.751 ms (25 allocations: 1.13 MiB)\n"
+      "  1.740 ms (26 allocations: 1.13 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Set{Int64} with 1 element:\n",
-       "  1533776805"
+       "1533776805"
       ]
      },
      "metadata": {},
@@ -162,9 +183,11 @@
     }
    ],
    "source": [
-    "@btime intersect(\n",
-    "    Set(P(n) for n in 165+1:hi),\n",
-    "    Set(H(n) for n in 143+1:hi)\n",
+    "@btime first(\n",
+    "    intersect(\n",
+    "        Set(P(n) for n in 165+1:hi),\n",
+    "        Set(H(n) for n in 143+1:hi)\n",
+    "    )\n",
     ")"
    ]
   }
