--- a/julia/problem_019.ipynb
+++ b/julia/problem_019.ipynb
@@ -24,7 +24,7 @@
    "id": "e21b4448",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (function)"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "id": "3ca313cf",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (oneliner)"
    ]
   },
   {
