--- a/julia/problem_099.ipynb
+++ b/julia/problem_099.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using CSV, DataFrames"
+    "using CSV, DataFrames, BenchmarkTools"
    ]
   },
   {
@@ -85,19 +85,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7438055b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logarithms = [exp*log(base) for (base, exp) in zip(df.base, df.exp)];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "8a86fd44",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  53.125 μs (2494 allocations: 62.62 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -109,19 +106,21 @@
     }
    ],
    "source": [
-    "max_value = 0\n",
-    "max_index = 0\n",
+    "@btime begin\n",
+    "    max_value = 0\n",
+    "    max_index = 0\n",
     "\n",
-    "counter = 1\n",
-    "for value in logarithms\n",
-    "    if max_value < value\n",
-    "        max_value = value\n",
-    "        max_index = counter\n",
+    "    counter = 1\n",
+    "    for value in [exp*log(base) for (base, exp) in zip(df.base, df.exp)]\n",
+    "        if max_value < value\n",
+    "            max_value = value\n",
+    "            max_index = counter\n",
+    "        end\n",
+    "        counter += 1\n",
     "    end\n",
-    "    counter += 1\n",
-    "end\n",
     "\n",
-    "max_index"
+    "    max_index\n",
+    "end"
    ]
   }
  ],
