--- a/python/problem_001.ipynb
+++ b/python/problem_001.ipynb
@@ -10,28 +10,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "4f6b438b",
+   "cell_type": "markdown",
+   "id": "320004e9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Setting\n",
-    "n = 1000"
+    "#### Solution 1 (function)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "aaa5f1a1",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9ddd8fcc",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Solution 1"
+    "def multiples(n=1000):\n",
+    "    s = 0\n",
+    "    for i in range(1, n):\n",
+    "        if (i%3 == 0) or (i%5 == 0):\n",
+    "            s += i\n",
+    "    return s"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "86eedacb-3def-49dd-8b09-07ad6f5af456",
+   "id": "eaf60461",
    "metadata": {},
    "outputs": [
     {
@@ -46,34 +50,25 @@
     }
    ],
    "source": [
-    "s = 0\n",
-    "for i in range(1, n):\n",
-    "    if (i%3 == 0) or (i%5 == 0):\n",
-    "        s += i\n",
-    "s"
+    "multiples()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7d2ebc28",
+   "id": "d5fbbc6e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.6 μs ± 234 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "43.8 μs ± 323 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "s = 0\n",
-    "for i in range(1, n):\n",
-    "    if (i%3 == 0) or (i%5 == 0):\n",
-    "        s += i\n",
-    "s"
+    "%timeit multiples()"
    ]
   },
   {
@@ -81,7 +76,7 @@
    "id": "f79377c2",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (oneliner)"
    ]
   },
   {
@@ -102,7 +97,7 @@
     }
    ],
    "source": [
-    "sum([i for i in range(n) if (i%3 == 0) or (i%5 == 0)])"
+    "sum([i for i in range(1000) if (i%3 == 0) or (i%5 == 0)])"
    ]
   },
   {
@@ -115,13 +110,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.1 μs ± 1.89 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "42.8 μs ± 318 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "sum([i for i in range(n) if (i%3 == 0) or (i%5 == 0)])"
+    "%timeit sum([i for i in range(1000) if (i%3 == 0) or (i%5 == 0)])"
    ]
   },
   {
@@ -129,7 +123,7 @@
    "id": "77db6c57",
    "metadata": {},
    "source": [
-    "#### Solution 3"
+    "#### Solution 3 (union)"
    ]
   },
   {
@@ -150,7 +144,7 @@
     }
    ],
    "source": [
-    "sum(set(range(0, n, 3)).union(set(range(0, n, 5))))"
+    "sum(set(range(0, 1000, 3)).union(set(range(0, 1000, 5))))"
    ]
   },
   {
@@ -163,19 +157,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.7 μs ± 56.4 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "12.8 μs ± 207 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "sum(set(range(0, n, 3)).union(set(range(0, n, 5))))"
+    "%timeit sum(set(range(0, 1000, 3)).union(set(range(0, 1000, 5))))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
