--- a/python/problem_003.ipynb
+++ b/python/problem_003.ipynb
@@ -26,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prime generator\n",
     "def eratosthenes():\n",
     "\t'''Yields the sequence of prime numbers via the Sieve of Eratosthenes.'''\n",
     "\tD = {}  # map composite integers to primes witnessing their compositeness\n",
@@ -49,14 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prime factorization\n",
     "def prime_factorization(n):\n",
     "    factors = []\n",
     "    primes = eratosthenes()\n",
     "    while n != 1:\n",
     "        prime = next(primes)\n",
     "        while n%prime == 0:\n",
-    "            # print(prime, n)\n",
     "            factors.append(prime)\n",
     "            n = int(n/prime)\n",
     "    return factors"
@@ -67,21 +64,9 @@
    "execution_count": 3,
    "id": "9d585b52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 7, 13, 29]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "prime_factorization(13195)"
+    "assert prime_factorization(13195) == [5, 7, 13, 29]"
    ]
   },
   {
@@ -102,14 +87,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "max(prime_factorization(600851475143))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98c18397",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4 ms ± 6.85 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit max(prime_factorization(600851475143))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
