--- a/python/problem_004.ipynb
+++ b/python/problem_004.ipynb
@@ -69,13 +69,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "118 ms ± 4.46 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "122 ms ± 194 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "largest_palindrome_product(digits=3)"
+    "%timeit largest_palindrome_product(digits=3)"
    ]
   }
  ],
