--- a/python/problem_006.ipynb
+++ b/python/problem_006.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sum Square Difference\n",
     "def sum_square_difference(n):\n",
     "    sum_of_square = sum([i**2 for i in range(1, n+1)])\n",
     "    square_of_sum = sum(range(1, n+1))**2\n",
@@ -28,21 +27,9 @@
    "execution_count": 2,
    "id": "9d585b52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2640"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "sum_square_difference(n=10)"
+    "assert sum_square_difference(n=10) == 2640"
    ]
   },
   {
@@ -63,14 +50,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "sum_square_difference(n=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "97e15d2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.82 μs ± 10.7 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum_square_difference(n=100)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
