--- a/python/problem_007.ipynb
+++ b/python/problem_007.ipynb
@@ -10,22 +10,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6d89e8e7",
-   "metadata": {},
-   "source": [
-    "Sources:\n",
-    "- Prime Generator: https://code.activestate.com/recipes/117119"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prime generator\n",
     "def eratosthenes():\n",
     "\t'''Yields the sequence of prime numbers via the Sieve of Eratosthenes.'''\n",
     "\tD = {}  # map composite integers to primes witnessing their compositeness\n",
@@ -48,7 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prime\n",
     "def prime(n):\n",
     "    primes = eratosthenes()\n",
     "    for i in range(n):\n",
@@ -61,21 +50,9 @@
    "execution_count": 3,
    "id": "8e8fa561",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "prime(6)"
+    "assert prime(6) == 13"
    ]
   },
   {
@@ -96,14 +73,40 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "prime(10001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0f883624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.3 ms ± 46.6 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit prime(10001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "554e79b2",
+   "metadata": {},
+   "source": [
+    "Source:\n",
+    "- Prime Generator: https://code.activestate.com/recipes/117119"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
