--- a/python/problem_008.ipynb
+++ b/python/problem_008.ipynb
@@ -26,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Largest product in a series\n",
     "def largest_product(series, digits):\n",
     "    products = []\n",
     "    for i in range(len(series)-digits+1):\n",
@@ -42,21 +41,9 @@
    "execution_count": 3,
    "id": "41d76f14",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "largest_product(series, 4) == 5832"
+    "assert largest_product(series, 4) == 5832"
    ]
   },
   {
@@ -77,14 +64,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "largest_product(series, 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c2e9f49a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "908 μs ± 826 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit largest_product(series, 13)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
