--- a/python/problem_009.ipynb
+++ b/python/problem_009.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Triplet product\n",
     "def triplet_product(n):\n",
     "    for a in range(n):\n",
     "        for b in range(n):\n",
@@ -43,14 +42,31 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "triplet_product(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "35801c60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.56 s ± 90.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit triplet_product(1000)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
