--- a/python/problem_010.ipynb
+++ b/python/problem_010.ipynb
@@ -10,22 +10,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6d89e8e7",
-   "metadata": {},
-   "source": [
-    "Sources:\n",
-    "- Prime Generator: https://code.activestate.com/recipes/117119"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prime generator\n",
     "def eratosthenes():\n",
     "\t'''Yields the sequence of prime numbers via the Sieve of Eratosthenes.'''\n",
     "\tD = {}  # map composite integers to primes witnessing their compositeness\n",
@@ -48,7 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Summation of Primes\n",
     "def summation_of_primes(n):\n",
     "    primes = eratosthenes()\n",
     "    summation = 0\n",
@@ -56,7 +45,6 @@
     "    while True:\n",
     "        prime = next(primes)\n",
     "        if prime < n:\n",
-    "            # print(prime)\n",
     "            summation += prime\n",
     "        else:\n",
     "            break\n",
@@ -68,21 +56,9 @@
    "execution_count": 3,
    "id": "8e8fa561",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "summation_of_primes(10) == 17"
+    "assert summation_of_primes(10) == 17"
    ]
   },
   {
@@ -103,14 +79,40 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "summation_of_primes(2_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d3850ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "536 ms ± 8.28 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit summation_of_primes(2_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83486bc4",
+   "metadata": {},
+   "source": [
+    "Source:\n",
+    "- Prime Generator: https://code.activestate.com/recipes/117119"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
