--- a/python/problem_002.ipynb
+++ b/python/problem_002.ipynb
@@ -10,47 +10,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "123e83b0",
+   "metadata": {},
+   "source": [
+    "#### Solution 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f6b438b",
+   "id": "85bacd8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Init\n",
-    "n = 4_000_000 # four million\n",
-    "fib = [1, 2]  # initial Fibonacci sequence"
+    "def fibonacci(n=4_000_000):\n",
+    "    fib = [1, 2]\n",
+    "    s = fib[-1]\n",
+    "    while sum(fib[-2:]) < n:\n",
+    "        fib.append(sum(fib[-2:]))\n",
+    "        if fib[-1]%2 == 0:\n",
+    "            s += fib[-1]\n",
+    "    return s"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "86eedacb-3def-49dd-8b09-07ad6f5af456",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build Fibonacci sequence\n",
-    "while sum(fib[-2:]) < n:\n",
-    "    fib.append(sum(fib[-2:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2d9ae0a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sum even numbers\n",
-    "s = 0\n",
-    "for i in fib:\n",
-    "    if i%2 == 0:\n",
-    "        s += i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7d2ebc28",
+   "id": "2c58e650",
    "metadata": {},
    "outputs": [
     {
@@ -59,20 +46,106 @@
        "4613732"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "s"
+    "fibonacci()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "537d6654",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.4 μs ± 284 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fibonacci()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd65f0fa",
+   "metadata": {},
+   "source": [
+    "#### Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "900aece2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacci(n=4_000_000):\n",
+    "    \n",
+    "    fib = [1, 2]\n",
+    "    s = fib[-1]\n",
+    "    while sum(fib[-2:]) < n:\n",
+    "        fib.append(sum(fib[-2:]))\n",
+    "\n",
+    "    s = 0\n",
+    "    for i in fib:\n",
+    "        if i%2 == 0:\n",
+    "            s += i\n",
+    "\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a6e33a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4613732"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5f18005e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.97 μs ± 26 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fibonacci()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
