--- a/python/problem_005.ipynb
+++ b/python/problem_005.ipynb
@@ -14,7 +14,7 @@
    "id": "1cc7e0f8",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "#### Solution 1 (brute force)"
    ]
   },
   {
@@ -24,7 +24,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Brute Force\n",
     "def smallest_multiple_brute_force(n=20):\n",
     "    x = 1\n",
     "    while not all([x%i == 0 for i in range(1, n+1)]):\n",
@@ -50,8 +49,25 @@
     }
    ],
    "source": [
-    "# Answer\n",
     "smallest_multiple_brute_force(n=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c7e4c4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3min 14s ± 3.21 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit smallest_multiple_brute_force(n=20)"
    ]
   },
   {
@@ -59,17 +75,16 @@
    "id": "62f176ee",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "#### Solution 2 (factors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e8875591",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Factors\n",
     "def factors(n):\n",
     "    facs = []\n",
     "    for i in range(1, n+1):\n",
@@ -80,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8716ab1e",
    "metadata": {},
    "outputs": [
@@ -112,19 +127,17 @@
     }
    ],
    "source": [
-    "# Factors\n",
     "for i in range(1, 21):\n",
     "    print(i, ':', factors(i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2a3e52af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fast\n",
     "def smallest_multiple_fast():\n",
     "    smallest_multiple = 20\n",
     "    while True:\n",
@@ -144,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5902f55e",
    "metadata": {},
    "outputs": [
@@ -154,95 +167,37 @@
        "232792560"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
     "smallest_multiple_fast()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4694b65",
-   "metadata": {},
-   "source": [
-    "#### Performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fc067b7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3min 52s ± 5.8 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "smallest_multiple_brute_force(n=20)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6fca7c96",
+   "id": "8179bac4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.07 s ± 28.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.82 s ± 14 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "smallest_multiple_fast()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8957411a",
-   "metadata": {},
-   "source": [
-    "#### Validate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "5db967b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smallest_multiple_brute_force(n=20) == smallest_multiple_fast()"
+    "%timeit smallest_multiple_fast()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datascience",
    "language": "python",
    "name": "python3"
   },
